# LLM-PPI-Extraction

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  add_names.py  build_cache.py  check_hallucinations.py  check_hallucinations.sh  clients.py  const.py  convert_gguf_llama33.py  converter.py  dataset.py  dicts.py  documents.py  embed.py  examples.py  extract.py  extract_chunks.py  extract_chunks.sh  extraction_utils.py  filter_cardiac_papers.py  filter_regu.py  finetune.py  finetuning_tools.py  fp_analysis.py  generate.py  generate_graph.py  generate_graph.sh  get_documents.py  graph_generator.py  graph_generator.sh  graph_utils.py  graphdocs2json.py  graphdocs2json.sh  hf_extract_ppi.py  judge.py  langchain_kg.py  (+41 more)
.github/workflows/: ci.yml
baml/baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml/baml_src/: cardiac_filter.baml  clients.baml  judge.baml  names.baml  rel.baml
cardiac_filtering/: filter_cardiac_papers.py  summarize_cardiac_filter.py
langchain-ai/libs/core/langchain_core/messages/: utils.py
slurm/: 5curated.sh  analyze_hf_bench_jobs.sh  bench_ppi_nomaxchars_once.sh  benchmark_hf_ppi_context.sh  benchmark_ppi_context_quick.sh  cardio_ppi.sh  cardio_ppi_ab_qwen332_thinking.sh  cardio_ppi_ab_repro_sep2025.sh  cardio_ppi_ab_repro_sep2025_r2.sh  cardio_ppi_cardiac_sharded.sh  cardio_ppi_cardioprior10_dedicated.sh  cardio_ppi_cardioprior10_examples_pos.sh  cardio_tf.sh  collate_cardiac_manuscripts_shards.sh  compare_5curated_triples.sh  filter_cardiac_manuscripts.sh  filter_cardiac_papers.sh  finetune.sh  finetune_gemma.sh  finetune_llama31.sh  finetune_llama33.sh  hf_extract_ppi_llama31regu.sh  llama31.sh  llama31_dynex.sh  llama31_dynex_5.sh  llama31_ensemble.sh  llama31_lookup.sh  llama31_new.sh  llama31_spacy.sh  llama31_tot.sh  llama31_true.sh  llama33.sh  llama33_dynex.sh  llama33_spacy.sh  ollama_import_llama31_regu_ppi.sh  ollama_import_llama33_regu_ppi.sh  parse_ppis.sh  parse_tfs.sh  qwen3.sh  regu_names.sh  (+29 more)
